// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu screen from left renders correctly 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "height": "100%",
      "left": -750,
      "position": "absolute",
      "width": "100%",
      "zIndex": 50,
    }
  }
>
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgba(255, 255, 255, 0)",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "height": "100%",
          "opacity": 1,
          "width": "20%",
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Menu screen from right renders correctly 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "height": "100%",
      "left": 750,
      "position": "absolute",
      "width": "100%",
      "zIndex": 50,
    }
  }
>
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgba(255, 255, 255, 0)",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "height": "100%",
          "opacity": 1,
          "width": "20%",
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Menu screen hidden 1`] = `null`;
